# serde-cpp

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE-MIT  README.md
include/: result.h  serde.h  serde_yaml.h
serde/: CMakeLists.txt
serde-cpp/: CMakeLists.txt  Config.cmake.in
serde-cpp/serde/: CMakeLists.txt
serde-cpp/serde/include/serde/: de.h  deserialize.h  deserialize_builtin.h  deserializer.h  error.h  ser.h  serde.h  serialize.h  serialize_builtin.h  serializer.h  std.h
serde-cpp/serde/include/serde/de/: builtin.h  deserialize.h  deserialize_builtin.h  deserializer.h  std.h  traits.h
serde-cpp/serde/include/serde/de/std/: array.h  deque.h  forward_list.h  list.h  map.h  memory.h  optional.h  queue.h  set.h  stack.h  string.h  tuple.h  unordered_map.h  unordered_set.h  utility.h  variant.h  vector.h
serde-cpp/serde/include/serde/ser/: builtin.h  serialize.h  serializer.h  std.h  traits.h
serde-cpp/serde/include/serde/ser/std/: array.h  deque.h  forward_list.h  initializer_list.h  list.h  map.h  memory.h  optional.h  set.h  string.h  string_view.h  tuple.h  unordered_map.h  unordered_set.h  utility.h  variant.h  vector.h
serde-cpp/serde/include/serde/std/: array.h  deque.h  forward_list.h  initializer_list.h  list.h  map.h  memory.h  optional.h  queue.h  set.h  stack.h  string.h  string_view.h  tuple.h  unordered_map.h  unordered_set.h  utility.h  variant.h  vector.h
serde-cpp/serde_attr/: CMakeLists.txt
serde-cpp/serde_attr/cmake/: serde-cpp.cmake
serde-cpp/serde_attr/src/: main.cpp
serde-cpp/serde_attr/test/: CMakeLists.txt  mytypes.h  test.cpp
serde-cpp/serde_gen/: CMakeLists.txt
serde-cpp/serde_gen/cmake/: serde-cpp.cmake  serde_cpp.cmake
serde-cpp/serde_gen/src/: code_generator.h  common.cpp  common.h  cppast_code_generator.h  filter.h  filters.h  gen.cpp  gen.h  generate.cpp  generate.h  init.cpp  init.h  main.cpp  serde_gen.cpp  serde_gen2.cpp
serde-cpp/serde_gen/test/: CMakeLists.txt  test.cpp
serde-cpp/serde_yaml/: CMakeLists.txt
serde-cpp/serde_yaml/include/serde_yaml/: de_yaml.h  ser_yaml.h
serde-cpp/serde_yaml/include/serde_yaml/detail/: de_detail.h  ser_detail.h
serde-cpp/serde_yaml/src/: deserializer_yaml.cpp  serializer_yaml.cpp
serde-cpp/serde_yaml/test/: advanced.cpp  builtin.cpp  errors.cpp  impl.cpp  main.cpp  std.cpp  test.cpp  types.cpp  types.h
serde/include/: serde.h  serde_rapidyaml.h  serde_rawyaml.h  serde_yaml.h  serde_yaml_detail.h
serde/include/serde/: de.h  deserialize.h  deserialize_builtin.h  deserializer.h  serialize.h  serialize_builtin.h  serializer.h
serde/include/serde_yaml/: de_yaml.h  ser_detail.h  serde_yaml.h
serde/src/: serde_yaml.cpp
serde/src/serde_yaml/: deserializer_yaml.cpp  ser_yaml.cpp
serde/test/: impl.cpp  test.cpp
src/: impl.cpp  test.cpp
