#########################################################################################
# Dependencies
#########################################################################################
# CppAST to parse and work with the C++ AST
set(CPPAST_BUILD_TOOL ON) # fetches cxxopts
add_subdirectory(cppast)

#########################################################################################
# serde_attr
#########################################################################################
add_executable(serde_attr src/main.cpp)
target_link_libraries(serde_attr PRIVATE
  serde
  cppast
  cxxopts
)
install(TARGETS serde_attr)

#########################################################################################
# Tests
#########################################################################################
add_subdirectory(test)
